fix SampUtil.fileToUrl for weird characters
This utility function now percent-encodes non-URL-friendly characters;
non-ASCII characters are encoded using UTF-8.

The choice of UTF-8 is reasonable, though not constrained by
standards text anywhere.

This change was made address an issue raised by Sebastien Derriere:
file-protocol URLs in the system-default directory "Téléchargements"
for some FR-locale linux machines were getting rejected when an
attempt was made to store and transmit them in a SAMP Map, since
SAMP strings are constrained to a subset of 7-bit ASCII.